testdata/cot/invalid/syntax_errors/missing_brace.cot
// Missing closing brace - should fail to parse

fn main() {
    var x = 1
